--- a/example/extension/public/sidebar.html
+++ b/example/extension/public/sidebar.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Eko Sidebar</title>
+  <title>XSky Sidebar</title>
   <script src="js/vendor.js"></script>
   <style>
     ::-webkit-scrollbar {
